--- a/meat/Web.config
+++ b/meat/Web.config
@@ -4,6 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="betty" connectionString="Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog = master;
+			 Integrated Security = True;Connect Timeout = 30; Encrypt=False;TrustServerCertificate=False;
+			 ApplicationIntent=ReadWrite;MultiSubnetFailover=False;
+			 User ID=sa;Password=betty618742.;"/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
